// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Check /> test props checked={false} 1`] = `
<View
  style={
    Object {
      "borderColor": "#00b2ff",
      "borderRadius": 10,
      "borderWidth": 1,
      "height": 20,
      "width": 20,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 14,
          "margin": 2,
          "width": 14,
        },
        Object {
          "backgroundColor": "#FFF",
        },
      ]
    }
  />
</View>
`;

exports[`<Check /> test props checked={true} 1`] = `
<View
  style={
    Object {
      "borderColor": "#00b2ff",
      "borderRadius": 10,
      "borderWidth": 1,
      "height": 20,
      "width": 20,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 14,
          "margin": 2,
          "width": 14,
        },
        Object {
          "backgroundColor": "#00b2ff",
        },
      ]
    }
  />
</View>
`;
